# mx-chain-simulator-interface-rs

./: Cargo.toml  build.rs
assets/: libwasmer_darwin_amd64.dylib
assets/config/node/: allValidatorsKeys.pem
config/: Cargo.toml  build.rs
config/assets/config/node/config/: allValidatorsKeys.pem
config/assets/config/proxy/config/swagger/: index.html
config/src/: lib.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/error/: fs.rs  lib.rs  process.rs  simulator.rs
core/src/error/requests/: set_state.rs
core/src/simulator/: config.rs  mod.rs  options.rs
core/src/simulator/requests/: initial_wallets.rs  mod.rs  set_address_keys.rs
core/src/utils/: fs.rs  process.rs
src/: lib.rs  main.rs
src/error/: lib.rs  mod.rs  process.rs  simulator.rs
src/error/requests/: generate_blocks.rs  initial_wallets.rs  mod.rs  set_address_keys.rs
src/simulator/: config.rs  mod.rs  model.rs  options.rs  process.rs  start.rs
src/simulator/requests/: generate_blocks.rs  mod.rs  set_state.rs
src/utils/: fs.rs  mod.rs  process.rs
