[package]
name = "mx-chain-simulator-interface-config-rs"
version = "0.0.1"
description = "Configuration files for mx-chain-simulator-interface-rs"
repository = "https://github.com/gfusee/mx-chain-simulator-interface-rs"
edition = "2021"
include = ["src", "build.rs", "assets/**/*"]
categories = ["cryptography::cryptocurrencies"]
license = "GPL-3"
keywords = ["multiversx", "localnet", "blockchain", "testnet", "simulator"]